# ECMA-SL-pub

./: .gitattributes  .gitignore  .gitmodules  .ocamlformat  CHANGES.md  CONTRIBUTING.md  README.md  dune  dune-project  ecma-sl.opam  ecma-sl.opam.template
.github/workflows/: build.yml  changes.yml  test262.yml
JS-Interpreters/: dune  es6-sym.cesl
JS2ECMA-SL/: README.md  dune  package.json  script.ml
JS2ECMA-SL/src/: index.js
JS2ECMA-SL/src/ECMA-SL/: CsFrame.js  SCSFrame.js  SecStore.js  Store.js
JS2ECMA-SL/src/ECMA-SL/syntax/: Func.js  Heap.js  Interceptor.js  Lattice.js  Oper.js  Prog.js  SecHeap.js  Val.js
JS2ECMA-SL/src/ECMA-SL/syntax/Expr/: BinOptExpr.js  Expr.js  NOptExpr.js  NewObj.js  UnOptExpr.js  ValExpr.js  VarExpr.js
JS2ECMA-SL/src/ECMA-SL/syntax/Labels/: AssignCallLab.js  AssignInObjCheckLab.js  AssignLab.js  AssignNewObjLab.js  BranchLab.js  EmptyLab.js  FieldAssignLab.js  FieldDeleteLab.js  FieldLookupLab.js  MergeLab.js  PrintLab.js  ReturnLab.js  UpgObjectLab.js  UpgPropExistsLab.js  UpgPropValLab.js  UpgStructLab.js  UpgVarLab.js
JS2ECMA-SL/src/ECMA-SL/syntax/Stmt/: Assign.js  AssignCall.js  AssignInObjCheck.js  AssignNewObj.js  AssignObjToList.js  Block.js  Condition.js  Exception.js  FieldAssign.js  FieldDelete.js  FieldLookup.js  Loop.js  Merge.js  Print.js  Return.js  Skip.js  Stmt.js
JS2ECMA-SL/src/ECMA-SL/syntax/Val/: ListVal.js  LocationVal.js  PrimitiveVal.js  SymbolVal.js  TypeVal.js  Val.js  VoidVal.js
JS2ECMA-SL/src/ECMA-SL/transforms/: assignment.js  block.js  break.js  catchClause.js  continue.js  earlySyntaxError.js  for.js  forIn.js  functionCall.js  functionLiteral.js  identifier.js  index.js  literal.js  program.js  propertyAccessors.js  switch.js
JS2ECMA-SL/src/ECMA-SL/translator/: generator.js  index.js
JS2ECMA-SL/src/ECMA-SL/utils/: containsExpression.js  getDeclarations.js  getParamsNames.js  hasParameterExpressions.js  isSimpleParameterList.js  mapper.js  parse_regexp.js  processClasses.js  processTailCalls.js  strict.js  traverse.js
JS2ECMA-SL/src/regexp/: utils.js
JS2ECMA-SL/test/: exprs.js  forin_loop.js  func_shadowing.js  function.js  input.try_catch.js  input.with.js  obj_init.js  prop_accessors.js
bench/: dune
bench/diff/: diff.ml  dune  test_result.ml
doc/: esl2core.md
src/: dune  ecma_sl.ml  share.ml
src/base/: base.ml  cont.ml  dune  font.ml  io.ml  log.ml  string.ml  terminal.ml
src/js2ecma-sl/: api.ml  dune
src/semantics/: dune  re.ml
src/semantics/core/concrete/: eval_op.ml  external.ml  interpreter.ml  interpreter_base.ml  interpreter_tooling.ml
src/semantics/core/concrete/domains/: call_stack.ml  heap.ml  store.ml
src/semantics/core/concrete/instrumentors/: debugger.ml  monitor.ml  profiler.ml  tracer.ml
src/semantics/core/concrete/instrumentors/debugger/: debugger_cmd.ml  debugger_tui.ml  debugger_tui_code.ml  debugger_tui_execution.ml  debugger_tui_helper.ml  debugger_tui_terminal.ml  debugger_tui_view.ml  debugger_types.ml
src/semantics/core/concrete/instrumentors/monitors/nsu/: NSUMonitor.ml
src/semantics/core/concrete/instrumentors/monitors/nsu/domains/: NSUCallStack.ml  NSUException.ml  NSUHeap.ml  NSULabel.ml  NSUObject.ml  NSUStore.ml
src/semantics/core/concrete/instrumentors/monitors/nsu/levels/: NSULevel.ml  NSULevel2.ml  NSULevel_Dep.ml  NSUTopLevel.ml
src/semantics/core/functorial/: choice_monad_intf.ml  extern_func.ml  interpreter_functor.ml  interpreter_functor_intf.ml  link_env.ml  value_intf.ml
src/semantics/core/parser/: dune  lexer.mll  parser.mly  parsing.ml  parsing_helper.ml
src/semantics/error/: compile_error.ml  error_source.ml  error_trace.ml  error_type.ml  runtime_error.ml  typing_error.ml
src/semantics/extended/compiler/: compiler.ml  preprocessor.ml
src/semantics/extended/parser/: dune  eLexer.mll  eParser.mly  eParsing.ml  eParsing_helper.ml
src/semantics/extended/typing/: tChecker.ml  tCtx.ml  tExpr.ml  tOperator.ml  tStmt.ml  tSubtyping.ml
src/semantics/utils/: arith_utils.ml  byte_utils.ml  channel_utils.ml  code_utils.ml  date_utils.ml  parsing_utils.ml  string_utils.ml
src/symbolic/: choice_monad.ml  memory_intf.ml  object_intf.ml  solver.ml  solver.mli  symbolic.ml  symbolic_error.ml  symbolic_esl_ffi.ml  symbolic_interpreter.ml  symbolic_memory.ml  symbolic_memory.mli  symbolic_object.ml  symbolic_object.mli  symbolic_report.ml  symbolic_value.ml  symbolic_value.mli
src/symbolic/domains/heap_impl/: s_heap_branch_get_normal.ml  s_heap_get_ite.ml  s_heap_get_ite_undef.ml  s_heap_intf.ml  s_heap_obj_list.ml  s_heap_obj_list_undef.ml  symbolic_memory2.ml
src/symbolic/domains/obj_impl/: s_object_ite_no_branch.ml  s_object_ite_no_branch_undef.ml  s_object_list.ml  s_object_list_undef.ml  symbolic_object2.ml
src/syntax/: dune
src/syntax/core/: expr.ml  func.ml  prog.ml  stmt.ml
src/syntax/extended/: eExpr.ml  eFunc.ml  eImport.ml  eMacro.ml  ePat.ml  eProg.ml  eStmt.ml  eType.ml
src/syntax/share/: id.ml  loc.ml  object.ml  operator.ml  source.ml  value.ml
stdlib/: dune  fpath.esl  os.esl  queue.esl  stack.esl  stdlib.esl
test/: dune
test/symbolic/js/: basic_symbolic_number.js  basic_symbolic_string.js  dune  node_require_a.js  node_require_constant_a.js  node_require_constant_b.js  node_require_function_a.js  node_require_function_b.js  node_require_modify_intrinsics_a.js  node_require_modify_intrinsics_b.js  reference_error_1.js  reference_error_2.js  symbolic_number_arith.js  symbolic_number_branching.js  symbolic_string_array.js  symbolic_string_branching.js  symbolic_string_operations.js  test_basic_symbolic.t  test_node_require.t  test_reference_error.t
test/symbolic/js/relative-require/: a.js
test/symbolic/js/relative-require/b/: b.js  c.js
test/symbolic/simple/: assume.esl  dune  extern.esl  fib.esl  func.esl  if.esl  memory_0.esl  memory_1.esl  memory_2.esl  memory_delete.esl  object_delete.esl  object_lookup_0.esl  object_lookup_1.esl  object_lookup_2.esl  object_lookup_3.esl  object_lookup_4.esl  object_lookup_5.esl  object_lookup_6.esl  string_concat.esl  strings.esl  test_esl.t  while.esl
(+474 files in other folders)
