(dirs bin)

(executable
 (name script)
 (modules script))

(rule
 (enabled_if
  (and (= %{ocaml-config:system} linux) %{arch_sixtyfour}))
 (target js2ecma-sl)
 (deps bin/js2ecma-sl-linux)
 (action (copy %{deps} %{target})))

(rule
 (enabled_if
  (and (= %{ocaml-config:system} macosx) %{arch_sixtyfour}))
 (target js2ecma-sl)
 (deps bin/js2ecma-sl-macos)
 (action (copy %{deps} %{target})))

(install
 (section bin)
 (files js2ecma-sl))
